--- a/templates/login.html
+++ b/templates/login.html
@@ -11,32 +11,42 @@
     <div class="ml-5 mt-4" style="width:250pt" >
         <form method="POST">
             <h5>Login as,</h5>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                <label class="form-check-label" for="exampleRadios1">
+            <div >
+                <input type="radio" name="exampleRadios" value="option1" checked>
+                <label>
                   Employer
                 </label>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
+            <div>
+                <input type="radio" name="exampleRadios" value="option2">
+                <label>
                   Job Seeker
                 </label>
             </div>
 
             <!-- <label for="exampleInputEmail1">Email address</label> -->
-            <input type="email" name="email" class="form-control mb-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" name="email" placeholder="Enter email">
             <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             <!-- </div> -->
             <!-- <div class="form-group"> -->
             <!-- <label for="exampleInputPassword1">Password</label> -->
-            <input type="password" name="pass" class="form-control mb-2" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" name="pass" placeholder="Password">
             <!-- </div> -->
             <!-- <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div> -->
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="m-3">
+                <button type="submit">Submit</button>
+            </div>
+
+            <div class="mt-4">
+                <h5>Don't have an account yet!</h5>
+                <div class="ml-3">
+                    <button type="submit" name="regemp">Register</button>
+                </div>
+            </div>
+            <!-- <button type="submit" name="regjs">Job Seeker</button> -->
         </form>
     </div>
 
