--- a/templates/job_seeker_dashboard.html
+++ b/templates/job_seeker_dashboard.html
@@ -8,58 +8,61 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <h3>Welcome {{name}}</h3>
+    <div class="m-4">
+        <h3>Welcome {{name}}</h3>
     
-    <form method="POST">
-     
-        <button type="submit" name="profile">profile</button>
-        {% if request.method == 'POST' and 'profile' in request.form %}
-        <div class="container">
-           
-            <div class="mb-3 col">
+        <form method="POST" style="width: 180pt;">
+            <div class="m-3">
+            <button type="submit" name="profile">profile</button>
+            {% if request.method == 'POST' and 'profile' in request.form %}
+            </div>
+            <div >
                 name
-                <input type="text" name="name" class="form-control" value="{{profile[1]}}">
+                <input type="text" name="name" value="{{profile[1]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 age
-                <input type="text" name="age" class="form-control" value="{{profile[2]}}">
+                <input type="text" name="age" value="{{profile[2]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 gender
-                <input type="text" name="gender" class="form-control" value="{{profile[3]}}">
+                <input type="text" name="gender" value="{{profile[3]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 education
-                <input type="text" name="education" class="form-control" value="{{profile[5]}}">
+                <input type="text" name="education" value="{{profile[5]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 mobile
-                <input type="text" name="mobile" class="form-control" value="{{profile[10]}}">
+                <input type="text" name="mobile" value="{{profile[10]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 area
-                <input type="text" name="area" class="form-control" value="{{profile[9]}}">
+                <input type="text" name="area" value="{{profile[9]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 city
-                <input type="text" name="city" class="form-control" value="{{profile[8]}}">
+                <input type="text" name="city" value="{{profile[8]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 email_id
-                <input type="text" name="email_id" class="form-control" value="{{profile[6]}}">
+                <input type="text" name="email_id" value="{{profile[6]}}">
             </div>
-            <div class="mb-3 col">
+            <div >
                 password
-                <input type="text" name="password" class="form-control" value="{{profile[7]}}">
+                <input type="text" name="password" value="{{profile[7]}}">
             </div>
-        </div>
-        <button type="submit" name="sub4">save profile</button>
+            <div class="m-3">
+                <button type="submit" name="sub4">save profile</button>
+            </div>
+        
+        
         {% endif %}
 
 
         
-    </form>
-    
+        </form>
+    </div>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
