--- a/templates/registration.html
+++ b/templates/registration.html
@@ -5,52 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>employer_registration</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <form method="POST" style="width: 150pt;">
-        <div>
-            <input type="radio" name="who" value="emp">employer
-        </div>
-        <div>
-            <input type="radio" name="who" value="js">job seeker
-        </div>
-        <div>
-            <label>Name</label>
-            <input required autofocus type="text" name="name">
-        </div>
-        <div>
-            <label>Age</label>
-            <input type="text" name="age">
-        </div>
-        <div>
-            gender
-            <input type="text" name="gender">
-        </div>
-        <div>
-            education
-            <input type="text" name="education">
-        </div>
-        <div>
-            mobile
-            <input type="text" name="mobile">
-        </div>
-        <div>
-            area
-            <input type="text" name="area">
-        </div>
-        <div>
-            city
-            <input type="text" name="city">
-        </div>
-        <div>
-            email
-            <input type="text" name="email_id">
-        </div>
-        <div> 
-            password
-            <input type="text" name="password">
-        </div>
-        <button type="submit">Save</button>
-    </form>
+    <div class="m-4" style="width: 150pt;">
+    <form method="POST">
+            <div class="m-3">
+            <div>
+                <input type="radio" name="who" value="emp"><span style="padding: 5pt;">Employer</span>
+                </div>
+                <div>
+                    <input type="radio" name="who" value="js"><span style="padding: 5pt;">Job Seeker</span>
+                </div>
+            </div>
+            <div class="m-2">
+                Name
+                <input required autofocus type="text" name="name">
+            </div>
+            <div class="m-2">
+                Age
+                <input type="text" name="age">
+            </div>
+            <div class="m-2">
+                Gender
+                <input type="text" name="gender">
+            </div>
+            <div class="m-2">
+                Education
+                <input type="text" name="education">
+            </div>
+            <div class="m-2">
+                Mobile
+                <input type="text" name="mobile">
+            </div>
+            <div class="m-2">
+                Area
+                <input type="text" name="area">
+            </div>
+            <div class="m-2">
+                City
+                <input type="text" name="city">
+            </div>
+            <div class="m-2">
+                Email
+                <input type="text" name="email_id">
+            </div>
+            <div class="m-2"> 
+                Password
+                <input type="text" name="password">
+            </div>
+            <div class="m-3">
+                <button type="submit">Save</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
