--- a/templates/employer_dashboard.html
+++ b/templates/employer_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>employer_dashboard</title>
+    <title>dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body class="m-4">
@@ -12,10 +12,28 @@
     {% for i in jobs %}
         <div>{{i}}</div>
     {% endfor %}
-    <div style="height: 20pt;"></div>
+    <br>
+    
     <form method="POST">
+        See Applications<br>
+        <input type="text" name="seejobid" placeholder="Enter Job ID">
+        <button type="submit" name="see">Go</button>
+        <div style="height: 10pt;"></div>
+        {% if request.method=="POST" and "seejobid" in request.form %}
+        {% for i in jobseekers %}
+            <div>{{i}}</div>
+        {% endfor %}
+        <br>
+        <div class="ml-4">
+            Accept Request<br>
+            <input type="text" name="reqjsid" placeholder="Enter Job Seekers ID">
+            <button type="submit" name="accreq">Go</button>
+        </div>
+        {% endif %}
+        
+        <div style="height: 20pt;"></div>
         <div style="width: 200pt;">
-            <label>Update Job application</label>
+            <label>Update Job Application</label>
             <input name="jobid" type="text" value="{{request.form['jobid']}}" placeholder="Enter Job ID">
             <button type="submit" name='sub1'>Go</button>
         </div>
