--- a/templates/job_seeker_dashboard.html
+++ b/templates/job_seeker_dashboard.html
@@ -14,6 +14,8 @@
         <form method="POST" style="width: 180pt;">
             <div class="m-3">
             <button type="submit" name="profile">profile</button>
+            <div style="height: 10pt;"></div>
+            <button type="submit" name="searchjob">Search Job</button>
             {% if request.method == 'POST' and 'profile' in request.form %}
             </div>
             <div >
