--- a/templates/employer_dashboard.html
+++ b/templates/employer_dashboard.html
@@ -6,12 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <style>
+        .padin6{
+          padding-inline: 6pt;
+        }
+        
+    </style>
 </head>
 <body class="m-4">
     <h3>Welcome {{name}}</h3>
+    <br>
+    <h5>Jobs Posted</h5>
+    
+    <table>
+        <tr style="border-bottom: 1pt solid">
+            <th class="padin6">Id</th>
+            <th class="padin6">Role</th>
+            <th class="padin6">Timing</th>
+            <th class="padin6">Requirements</th>
+            <th class="padin6">Salary</th>
+            <th class="padin6">Available</th>
+        </tr>
     {% for i in jobs %}
-        <div>{{i}}</div>
+        <tr style="border-bottom: 1pt solid">
+            <td class="padin6">{{i[0]}}</td>
+            <td class="padin6">{{i[1]}}</td>
+            <td class="padin6">{{i[2]}}</td>
+            <td class="padin6">{{i[3]}}</td>
+            <td class="padin6">{{i[4]}}</td>
+            <td class="padin6">{{i[5]}}</td>
+        </tr>
     {% endfor %}
+    </table>
     <br>
     
     <form method="POST">
@@ -20,9 +47,33 @@
         <button type="submit" name="see">Go</button>
         <div style="height: 10pt;"></div>
         {% if request.method=="POST" and "seejobid" in request.form %}
+        
+        <table>
+            <tr style="border-bottom: 1pt solid">
+                <th class="padin6">ID</th>
+                <th class="padin6">Name</th>
+                <th class="padin6">Age</th>
+                <th class="padin6">Gender</th>
+                <th class="padin6">Likes</th>
+                <th class="padin6">Qualification</th>
+                <th class="padin6">City</th>
+                <th class="padin6">Email</th>
+                <th class="padin6">Mobile</th>
+            </tr>
         {% for i in jobseekers %}
-            <div>{{i}}</div>
+            <tr style="border-bottom: 1pt solid">
+                <td class="padin6">{{i[0]}}</td>
+                <td class="padin6">{{i[1]}}</td>
+                <td class="padin6">{{i[2]}}</td>
+                <td class="padin6">{{i[3]}}</td>
+                <td class="padin6">{{i[4]}}</td>
+                <td class="padin6">{{i[5]}}</td>
+                <td class="padin6">{{i[6]}}</td>
+                <td class="padin6">{{i[7]}}</td>
+                <td class="padin6">{{i[8]}}</td>
+            </tr>
         {% endfor %}
+        </table>
         <br>
         <div class="ml-4">
             Accept Request<br>
@@ -32,39 +83,39 @@
         {% endif %}
         
         <div style="height: 20pt;"></div>
-        <div style="width: 200pt;">
-            <label>Update Job Application</label>
+        <div>
+            <label>Update Job Application</label><br>
             <input name="jobid" type="text" value="{{request.form['jobid']}}" placeholder="Enter Job ID">
             <button type="submit" name='sub1'>Go</button>
         </div>
         {% if request.method == 'POST' and 'sub1' in request.form %}
-        <div style="width: 180pt;">
+        <div>
             <div class="m-2">
-                available
+                Available<br>
                 <input type="text" name="available" value="{{fulljob[0]}}">
             </div>
             <div class="m-2">
-                timing
+                Timing<br>
                 <input type="text" name="timing" value="{{fulljob[2]}}">
             </div>
             <div class="m-2">
-                requirement
+                Requirements<br>
                 <input type="text" name="requirement" value="{{fulljob[3]}}">
             </div>
             <div class="m-2">
-                city
+                City<br>
                 <input type="text" name="city" value="{{fulljob[4]}}">
             </div>
             <div class="m-2">
-                role
+                Role<br>
                 <input type="text" name="role" value="{{fulljob[5]}}">
             </div>
             <div class="m-2">
-                salary
+                Salary<br>
                 <input type="text" name="salary" value="{{fulljob[7]}}">
             </div>
             <div class="m-2">
-                work location
+                Worklocation<br>
                 <input type="text" name="work_location" value="{{fulljob[8]}}">
             </div>
         </div>
@@ -78,39 +129,39 @@
         <div style="width: 180pt;">
             <div class="m-2">
                 Name
-                <input type="text" name="name" value="{{profile[1]}}">
+                <input required type="text" name="name" value="{{profile[1]}}">
             </div>
-            <div class="m-2">
+            <!-- <div class="m-2">
                 Age
                 <input type="text" name="age" value="{{profile[2]}}">
-            </div>
+            </div> -->
             <div class="m-2">
                 Gender
-                <input type="text" name="gender" value="{{profile[3]}}">
+                <input required type="text" name="gender" value="{{profile[3]}}">
             </div>
             <div class="m-2">
-                Education
-                <input type="text" name="education" value="{{profile[5]}}">
+                Business name
+                <input required type="text" name="education" value="{{profile[5]}}">
             </div>
             <div class="m-2">
                 Mobile
                 <input type="text" name="mobile" value="{{profile[6]}}">
             </div>
-            <div class="m-2">
+            <!-- <div class="m-2">
                 Area
                 <input type="text" name="area" value="{{profile[7]}}">
-            </div>
-            <div class="m-2">
+            </div> -->
+            <!-- <div class="m-2">
                 City
                 <input type="text" name="city" value="{{profile[8]}}">
-            </div>
+            </div> -->
             <div class="m-2">
                 Email id
-                <input type="text" name="email_id" value="{{profile[10]}}">
+                <input required type="email" name="email_id" value="{{profile[10]}}">
             </div>
             <div class="m-2">
                 Password
-                <input type="text" name="password" value="{{profile[9]}}">
+                <input required type="pasword" name="password" value="{{profile[9]}}">
             </div>
         </div class="m-2">
         <div style="height: 10pt;"></div>
@@ -122,33 +173,36 @@
         {% if request.method == 'POST' and 'newjob' in request.form %}
         <div style="width: 180pt;">
             <div class="m-2">
+                Role
+                <input required type="text" name="nrole" >
+            </div>
+            <div class="m-2">
                 Timing
-                <input type="text" name="ntiming" >
+                <input required type="text" name="ntiming" >
             </div>
             <div class="m-2">
                 Requirement
-                <input type="text" name="nrequirement" >
+                <input required type="text" name="nrequirement" >
             </div>
             <div class="m-2">
                 City
-                <input type="text" name="ncity" >
-            </div>
-            <div class="m-2">
-                Role
-                <input type="text" name="nrole" >
+                <input required type="text" name="ncity" >
             </div>
             <div class="m-2">
                 Salary
-                <input type="text" name="nsalary" >
+                <input required type="text" name="nsalary" >
             </div>
             <div class="m-2">
-                Work location
+                Area
                 <input type="text" name="nwork_location" >
             </div>
         </div>
         <div style="height: 10pt;"></div>
         <button type="submit" name="sub3">Save Job</button>
         {% endif %}
+        <br>
+        <br>
+        <button type="submit" name="logo">Logout</button>
     </form>
     
     
