--- a/templates/login.html
+++ b/templates/login.html
@@ -24,18 +24,9 @@
                 </label>
             </div>
 
-            <!-- <label for="exampleInputEmail1">Email address</label> -->
-            <input type="email" name="email" placeholder="Enter email">
-            <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            <!-- </div> -->
-            <!-- <div class="form-group"> -->
-            <!-- <label for="exampleInputPassword1">Password</label> -->
-            <input type="password" name="pass" placeholder="Password">
-            <!-- </div> -->
-            <!-- <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div> -->
+            <input required type="email" name="email" placeholder="Enter email">
+            <input required type="password" name="pass" placeholder="Password">
+            
             <div class="m-3">
                 <button type="submit">Submit</button>
             </div>
