--- a/templates/search_job.html
+++ b/templates/search_job.html
@@ -7,17 +7,23 @@
     <title>search_job</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <style>
+        .padin6{
+          padding-inline: 6pt;
+        }
+    </style>
 </head>
 <body>
     <div class="m-4">
         <form method="POST">
             <div class="m-2">
                 City<br>
-                <input type="text" name="city" value="{{city[0]}}">
+                <input required type="text" name="city" value="{{city[0]}}">
             </div>
             <div class="m-2">
                 Minimum salary<br>
-                <input type="text" name="salary">
+                <input required type="text" name="salary">
             </div>
             <!-- <div class="m-2">
                 Shift
@@ -33,17 +39,36 @@
         
 
         {% if request.method=="POST" %}
-        <div style="height: 10pt;"></div>
+        <br>
         Apply for Job
         <br>
         <input type="text" placeholder="Job ID" name="jobid">
         <button type="submit" name="apply">apply</button>
     </form>
-
-        <div style="height: 10pt;"></div>
-        {% for i in jobs %}
-            <div>{{i}}</div>            
-        {% endfor %}
+        <br>
+        <table>
+            <tr style="border-bottom: 1pt solid">
+                <th class="padin6">ID</th>
+                <th class="padin6">Role</th>
+                <th class="padin6">Timing</th>
+                <th class="padin6">Requirement</th>
+                <th class="padin6">Salary</th>
+                <th class="padin6">Area</th>
+                <th class="padin6">Contact</th>
+            </tr>
+            {% for i in jobs %}
+            <tr style="border-bottom: 1pt solid">
+                <td class="padin6">{{i[0]}}</td>
+                <td class="padin6">{{i[1]}}</td>
+                <td class="padin6">{{i[2]}}</td>
+                <td class="padin6">{{i[3]}}</td>
+                <td class="padin6">{{i[4]}}</td>
+                <td class="padin6">{{i[5]}}</td>
+                <td class="padin6">{{i[6]}}</td>
+            </tr>                    
+            {% endfor %}
+        </table>
+        
         {% endif %}
     </div>
 </body>
