--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,51 +9,51 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <div class="m-4" style="width: 150pt;">
+    <div class="m-4">
     <form method="POST">
             <div class="m-3">
-            <div>
-                <input type="radio" name="who" value="emp"><span style="padding: 5pt;">Employer</span>
+                <div>
+                    <input required type="radio" name="who" value="emp"><span style="padding: 5pt;">Employer</span>
                 </div>
                 <div>
                     <input type="radio" name="who" value="js"><span style="padding: 5pt;">Job Seeker</span>
                 </div>
             </div>
             <div class="m-2">
-                Name
+                Name<br>
                 <input required autofocus type="text" name="name">
             </div>
             <div class="m-2">
-                Age
+                Age<br>
                 <input type="text" name="age">
             </div>
             <div class="m-2">
-                Gender
-                <input type="text" name="gender">
+                Gender<br>
+                <input required type="text" name="gender">
             </div>
             <div class="m-2">
-                Education
+                Education<br>
                 <input type="text" name="education">
             </div>
             <div class="m-2">
-                Mobile
-                <input type="text" name="mobile">
+                Mobile<br>
+                <input required type="text" name="mobile">
             </div>
             <div class="m-2">
-                Area
+                Area<br>
                 <input type="text" name="area">
             </div>
             <div class="m-2">
-                City
-                <input type="text" name="city">
+                City<br>
+                <input required type="text" name="city">
             </div>
             <div class="m-2">
-                Email
-                <input type="text" name="email_id">
+                Email<br>
+                <input required type="text" name="email_id">
             </div>
             <div class="m-2"> 
-                Password
-                <input type="text" name="password">
+                Password<br>
+                <input required type="text" name="password">
             </div>
             <div class="m-3">
                 <button type="submit">Save</button>
