--- a/templates/registration.html
+++ b/templates/registration.html
@@ -24,6 +24,10 @@
                 <input required autofocus type="text" name="name">
             </div>
             <div class="m-2">
+                Organization name<br>
+                <input type="text" name="orgname">
+            </div>
+            <div class="m-2">
                 Age<br>
                 <input type="text" name="age">
             </div>
