--- a/templates/login.html
+++ b/templates/login.html
@@ -10,20 +10,7 @@
 <body>
     <div class="m-4">
         <form method="POST">
-            <h5>Login as,</h5>
-            <div >
-                <input type="radio" name="exampleRadios" value="option1" checked>
-                <label>
-                  Employer
-                </label>
-            </div>
-            <div>
-                <input type="radio" name="exampleRadios" value="option2">
-                <label>
-                  Job Seeker
-                </label>
-            </div>
-
+            <h5>Login</h5>
             <input type="email" name="email" placeholder="Enter email">
             <br>
             <input type="password" name="pass" placeholder="Password">
