--- a/templates/job_seeker_dashboard.html
+++ b/templates/job_seeker_dashboard.html
@@ -60,8 +60,10 @@
         
         
         {% endif %}
-
-
+            <br>
+            <br>
+            <button type="submit" name="logo">Logout</button>
+        
         
         </form>
     </div>
