--- a/templates/registration.html
+++ b/templates/registration.html
@@ -29,7 +29,7 @@
             </div>
             <div class="m-2">
                 Age<br>
-                <input type="text" name="age">
+                <input type="number" name="age" placeholder="only for job seekers">
             </div>
             <div class="m-2">
                 Gender<br>
@@ -37,7 +37,7 @@
             </div>
             <div class="m-2">
                 Education<br>
-                <input type="text" name="education">
+                <input type="text" name="education" placeholder="only for job seekers">
             </div>
             <div class="m-2">
                 Mobile<br>
